...
    <string name="description">Description</string>
    <string name="start_sum">Start amount</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="accounts_list">Account list</string>
    <string name="currency">Currency</string>
...
    <string name="custom_currency_hint">Enter ISO 4217 currency code</string>
    <string name="edit">Edit</string>
    <string name="ok">@android:string/ok</string>
    <string name="third_party">Third party</string>
    <string name="sum">Amount</string>
    <string name="tag">Category</string>
    <string name="date">Date</string>
    <string name="op_date">Transaction\'s date</string>
    <string name="mode">Payment method</string>
    <string name="credit">Credit</string>
...
    <string name="allowed_sum_digits">0123456789+-.,</string>
    <string name="date_chars">0123456789/</string>
    <string name="no_operation_sch">No scheduled transaction. Press the top right "plus" button to create one.</string>
    <string name="no_operation">No transaction. Press the top right "plus" button or use quick add at bottom to create one.
    </string>
    <string name="new_op">New transaction</string>
...
    <string name="account_edit">Account edition</string>
    <string name="account_edit_title">Account edition</string>
    <string name="account_creation">Account creation</string>
    <string name="op_edition">Transaction edition</string>
    <string name="future_sum_at">Future balance at %1$s = %2$s</string>
    <string name="sum_at_selection">Balance at selection</string>
...
        \nReally delete?
    </string>
    <string name="yes">Yes</string>
    <string name="advanced">Advanced actions</string>
    <string name="backup_db">Backup database</string>
...
    <string name="empty_amount">Amount is empty</string>
    <string name="empty_third_party">Third party is empty</string>
    <string name="item_exists">Item already exists</string>

    <string-array name="periodicity_choices">
...
    <string name="basics">Transaction</string>
    <string name="end_date">End date</string>
    <string name="scheduled_ops">Schedule</string>
    <string name="account">Account</string>
    <string name="periodicity">Periodicity</string>
...
        and all occurrences of this scheduled operation?
    </string>
    <string name="del_all_occurrences">All</string>
    <string name="cancel_delete_occurrences">This</string>
    <string name="cancel_sch_deletion">None</string>
...
    </string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="disconnect">Disconnect</string>
    <string name="ask_update_scheduling">This transaction is from a scheduled one. Do you
...
        this and all future transactions in the series? (Press back button to cancel)
    </string>
    <string name="del_all_following">Future</string>
    <string name="del_only_current">Current</string>
    <string name="hide_ops_quick_add">Hide quick add</string>
...
    <string name="sched_op_total_sum">Total credit : %1$s — Total debit : %2$"s\nBalance : %3$s</string>
    <string name="sched_op_total_choose_account">Choose an account to get its scheduled transactions total</string>
    <string name="sch_edition">Scheduled transaction edition</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_title">Delete account \"%s\"</string>
...
    <string name="no_lbl">[None]</string>
    <string name="misc_chart_cat">Misc</string>
    <string name="op_creation">Transaction creation</string>
    <string name="default_account">Default account</string>
    <string name="account_defaults">Account\'s default values</string>
...
