...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


        <Button
                android:id="@+id/op_date_btn"
                android:text="lun. 04 Sept 2015"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

        <RelativeLayout
...
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/periodicity"/>

                    <Spinner
                            android:id="@+id/periodicity_choice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/custom_periodicity"
...

        <LinearLayout
                android:id="@+id/third_party_cont"
                style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_third_party"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/third_party"/>

            <ImageButton
                    android:id="@+id/edit_op_third_parties_list"
                    android:contentDescription="@string/third_parties"
                    style="@style/EditorImageButton"
                    android:src="@drawable/list_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <EditText
                    android:id="@+id/edit_op_sum"
                    style="@style/EditorEditText.Sum"
                    android:hint="@string/sum"/>

            <ImageButton
                    android:id="@+id/edit_op_sign"
                    android:contentDescription=""
...
                    android:src="@drawable/invert_sign_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_tag"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/tag"/>

            <ImageButton
                    android:id="@+id/edit_op_tags_list"
...
                    android:src="@drawable/list_48"/>
        </LinearLayout>

        <LinearLayout style="@style/EditorHorizontalLinearLayout">

            <fr.geobert.radis.tools.MyAutoCompleteTextView
                    android:id="@+id/edit_op_mode"
                    style="@style/EditorEditText"
                    android:completionThreshold="1"
                    android:hint="@string/mode"/>

            <ImageButton
                    android:id="@+id/edit_op_modes_list"
                    android:contentDescription=""
                    android:src="@drawable/list_48"
                    style="@style/EditorImageButton"/>
        </LinearLayout>

        <EditText
                android:id="@+id/edit_op_notes"
                style="@style/DescEditText"
                android:hint="@string/notes"/>

    </LinearLayout>
</ScrollView>

