...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

        <EditText
                android:id="@+id/edit_account_name"
                style="@style/EditorEditText"
                android:layout_weight="0"
                android:hint="@string/name"/>

        <EditText
                android:id="@+id/edit_account_start_sum"
                style="@style/EditorEditText.Sum"
                android:layout_weight="0"
                android:hint="@string/start_sum"/>

        <TextView
                style="@style/EditorTextView"
...
        <TextView
                style="@style/EditorTextView"
                android:layout_weight="0"
                android:text="@string/projection_date"/>

        <Spinner
                android:id="@+id/projection_date_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/projection_date_mode"/>

        <EditText
                android:id="@+id/projection_date_value"
                style="@style/EditorEditText.Date"
                android:inputType="number"
                android:layout_weight="0"
                android:layout_marginBottom="5dip"/>

        <EditText
                android:id="@+id/edit_account_desc"
                style="@style/DescEditText"
                android:hint="@string/description"/>
    </LinearLayout>
</ScrollView>

