package fr.geobert.radis.test

import android.app.Activity
import android.app.Instrumentation
import android.database.Cursor
import android.support.test.InstrumentationRegistry
import android.support.test.espresso.Espresso
import android.support.test.espresso.Espresso.onData
import android.support.test.espresso.Espresso.onView
import android.support.test.espresso.action.ViewActions
import android.support.test.espresso.action.ViewActions.*
import android.support.test.espresso.assertion.ViewAssertions.matches
import android.support.test.espresso.contrib.PickerActions
import android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import android.support.test.espresso.contrib.RecyclerViewActions.scrollToPosition
import android.support.test.espresso.core.deps.guava.base.Throwables
import android.support.test.espresso.core.deps.guava.collect.Sets
import android.support.test.espresso.matcher.ViewMatchers.*
import android.support.test.rule.ActivityTestRule
import android.support.test.runner.AndroidJUnit4
import android.support.test.runner.lifecycle.ActivityLifecycleMonitorRegistry
import android.support.test.runner.lifecycle.Stage
import android.test.suitebuilder.annotation.LargeTest
import android.util.Log
import android.view.View
import android.widget.DatePicker
import android.widget.EditText
import android.widget.ListView
import android.widget.TextView
import fr.geobert.espresso.DebugEspresso
import fr.geobert.radis.MainActivity
import fr.geobert.radis.R
import fr.geobert.radis.data.Operation
import fr.geobert.radis.db.DbContentProvider
import fr.geobert.radis.tools.DBPrefsManager
import fr.geobert.radis.tools.SUM_FORMAT
import fr.geobert.radis.tools.TIME_ZONE
import fr.geobert.radis.tools.formatDate
import fr.geobert.radis.tools.formatDateLong
import fr.geobert.radis.tools.formatSum
import fr.geobert.radis.tools.minusMonth
import fr.geobert.radis.tools.plusMonth
import fr.geobert.radis.ui.ConfigFragment
import fr.geobert.radis.ui.adapter.OpRowHolder
import hirondelle.date4j.DateTime
import org.hamcrest.Matcher
import org.hamcrest.Matchers.*
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith
import java.text.SimpleDateFormat
import java.util.*
import java.util.concurrent.Callable
import java.util.concurrent.atomic.AtomicReference

@RunWith(AndroidJUnit4::class)
@LargeTest class RadisTest {
    init {
        MainActivity.TEST_MODE = true
    }

    @get:org.junit.Rule val activityRule = ActivityTestRule(MainActivity::class.java)

    private fun getActivity() = activityRule.activity

    private fun clearDB() {
        val appCtx = InstrumentationRegistry.getTargetContext().applicationContext
        DBPrefsManager.getInstance(appCtx).resetAll()
        val client = appCtx.contentResolver.acquireContentProviderClient("fr.geobert.radis.db")
        val provider = client.localContentProvider as DbContentProvider
        provider.deleteDatabase(appCtx)
        client.release()
    }

    @Before
    fun setUp() {
        //clearDB()
    }

    @After
    fun tearDown() {
        closeAllActivities(InstrumentationRegistry.getInstrumentation())
    }

    fun closeAllActivities(instrumentation: Instrumentation) {
        val NUMBER_OF_RETRIES = 100
        var i = 0
        while (closeActivity(instrumentation)) {
            if (i++ > NUMBER_OF_RETRIES) {
                throw AssertionError("Limit of retries excesses")
            }
            Thread.sleep(200)
        }
    }

    fun <X> callOnMainSync(instrumentation: Instrumentation, callable: Callable<X>): X {
        val retAtomic = AtomicReference<X>()
        val exceptionAtomic = AtomicReference<Throwable>()
        instrumentation.runOnMainSync({
            try {
                retAtomic.set(callable.call())
            } catch (e: Throwable) {
                exceptionAtomic.set(e)
            }
        })
        val exception = exceptionAtomic.get()
        if (exception != null) {
            //Throwables.propagateIfInstanceOf(exception, Exception::class.javaClass)
            Throwables.propagate(exception)
        }
        return retAtomic.get()
    }

    fun getActivitiesInStages(vararg stages: Stage): HashSet<Activity> {
        val activities = Sets.newHashSet<Activity>()
        val instance = ActivityLifecycleMonitorRegistry.getInstance()
        for (stage in stages) {
            val activitiesInStage = instance.getActivitiesInStage(stage)
            if (activitiesInStage != null) {
                activities.addAll(activitiesInStage)
            }
        }
        return activities
    }

    private fun closeActivity(instrumentation: Instrumentation): Boolean {
        val activityClosed = callOnMainSync(instrumentation, Callable<kotlin.Boolean> {
            val activities = getActivitiesInStages(Stage.RESUMED, Stage.STARTED, Stage.PAUSED, Stage.STOPPED, Stage.CREATED)
            activities.removeAll(getActivitiesInStages(Stage.DESTROYED))
            if (activities.size > 0) {
                val activity = activities.iterator().next()
                activity.finish()
                true
            } else {
                false
            }
        })
        if (activityClosed) {
            instrumentation.waitForIdleSync()
        }
        return activityClosed
    }


    @Test fun testEditOp() {
        TAG = "testEditOp"
        Helpers.addManyOps()
        Helpers.clickOnRecyclerViewAtPos(5)
        onView(withId(R.id.operation_list)).perform(scrollToPosition<OpRowHolder<Operation>>(6))
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.op_edition)
        onView(withId(R.id.edit_op_sum)).perform(scrollTo())
        onView(withId(R.id.edit_op_sum)).perform(clearText())
        onView(withId(R.id.edit_op_sum)).perform(typeText("103"))
        Helpers.clickOnActionItemConfirm()
        Helpers.checkAccountSumIs((-2.5).formatSum())
    }

    @Test fun testQuickAddFromOpList() {
        TAG = "testQuickAddFromOpList"
        Helpers.addAccount()
        onView(withId(R.id.account_sum)).check(matches(withText(containsString(1000.50.formatSum()))))
        onView(withId(R.id.quickadd_third_party)).perform(typeText("Toto"))
        onView(withId(R.id.quickadd_amount)).perform(typeText("-1"))
        onView(withId(R.id.quickadd_validate)).perform(click())
        Helpers.checkAccountSumIs(999.50.formatSum())
        onView(withText(R.string.no_operation)).check(matches(not(isDisplayed())))
    }

    @Test fun testDisableAutoNegate() {
        TAG = "testDisableAutoNegate"
        Helpers.addAccount()
        onView(withId(R.id.create_operation)).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.op_creation)
        Helpers.scrollThenTypeText(R.id.edit_op_third_party, OP_TP)
        Helpers.scrollThenTypeText(R.id.edit_op_sum, "+$OP_AMOUNT")
        onView(withId(R.id.edit_op_sum)).check(matches(withText(equalTo("+${10.50.formatSum()}"))))
        Helpers.clickOnActionItemConfirm()
        Helpers.checkAccountSumIs(1011.0.formatSum())
        onView(withId(R.id.op_sum)).check(matches(withText(equalTo(10.50.formatSum()))))
    }

    /**
     * Schedule ops
     */


    @Test fun testEditScheduledOp() {
        TAG = "testEditScheduledOp"
        Helpers.setUpSchOp()
        Helpers.addScheduleOp(DateTime.today(TIME_ZONE))
        onView(withText(R.string.no_operation)).check(matches(not(isDisplayed())))
        Helpers.checkAccountSumIs(991.0.formatSum())

        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())

        Helpers.checkTitleBarDisplayed(R.string.op_edition)

        onView(withId(R.id.edit_op_sum)).perform(clearText())
        onView(withId(R.id.edit_op_sum)).perform(typeText("-7.50"))

        Helpers.clickOnActionItemConfirm()

        onView(withText(R.string.update)).perform(click())
        Helpers.checkAccountSumIs(993.0.formatSum())
    }


    @Test fun testDelFutureOccurences() {
        TAG = "testDelFutureOccurences"
        val nbOps = Helpers.setupDelOccFromOps()
        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.delete_op), isDisplayed())).perform(click())
        Helpers.clickOnDialogButton(R.string.del_all_following)
        Helpers.checkAccountSumIs((1000.5 - (nbOps - 1)).formatSum())
    }


    @Test fun testDelAllOccurencesFromOps() {
        TAG = "testDelAllOccurencesFromOps"
        Helpers.setupDelOccFromOps()
        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.delete_op), isDisplayed())).perform(click())
        Helpers.clickOnDialogButton(R.string.del_all_occurrences)
        onView(withText(R.string.no_operation)).check(matches(isDisplayed()))
        Helpers.checkAccountSumIs(1000.5.formatSum())
    }

    // issue 112 : it was about when clicking on + or - of date chooser then cancel that does not work
    // since android 3, the date picker has no buttons anymore, removed Picker usage
    @Test fun testCancelSchEdition() {
        TAG = "testCancelSchEdition"
        Helpers.setupDelOccFromOps()
        Helpers.clickInDrawer(R.string.scheduled_ops)

        var date: CharSequence? = Helpers.getTextFrom(R.id.op_date)

        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.sch_edition)

        val today = DateTime.today(TIME_ZONE).minusMonth(2)
        onView(withId(R.id.op_date_btn)).perform(scrollTo())
        Helpers.setDateOnPicker(R.id.op_date_btn, today)
        Helpers.clickOnActionItemConfirm()
        Helpers.clickOnDialogButton(R.string.cancel)
        Espresso.pressBack()

        Log.d(TAG, "before date : " + date)
        onView(allOf(withId(R.id.op_date), isDisplayed())).check(matches(withText(equalTo(date.toString()))))
    }

    // issue 59 test
    @Test fun testDeleteAllOccurences() {
        TAG = "testDeleteAllOccurences"
        Helpers.setUpSchOp()
        onView(withId(R.id.create_operation)).perform(click())

        val today = DateTime.today(TIME_ZONE).minusMonth(2)

        Helpers.setDateOnPicker(R.id.op_date_btn, today)

        Helpers.scrollThenTypeText(R.id.edit_op_third_party, OP_TP)
        Helpers.scrollThenTypeText(R.id.edit_op_sum, "9.50")
        Helpers.scrollThenTypeText(R.id.edit_op_tag, RadisTest.OP_TAG)
        Helpers.scrollThenTypeText(R.id.edit_op_mode, RadisTest.OP_MODE)
        Helpers.scrollThenTypeText(R.id.edit_op_notes, RadisTest.OP_DESC)

        onView(withId(R.id.periodicity_choice)).perform(scrollTo())
        onView(withId(R.id.periodicity_choice)).perform(click())
        val strs = getActivity().resources.getStringArray(R.array.periodicity_choices).get(1)
        onData(allOf(iz(instanceOf(String::class.java)), iz(equalTo(strs)))).perform(click())
        Helpers.clickOnActionItemConfirm()

        Espresso.pressBack()

        // TODO assertEquals(3, solo!!.getCurrentViews(javaClass<ListView>()).get(0).getCount())

        Helpers.clickInDrawer(R.string.scheduled_ops)
        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.delete_op), isDisplayed())).perform(click())
        Helpers.clickOnDialogButton(R.string.del_all_occurrences)

        onView(withText(R.string.no_operation_sch)).check(matches(isDisplayed()))

        Espresso.pressBack()

        onView(withText(R.string.no_operation)).check(matches(isDisplayed()))
        Helpers.checkAccountSumIs(1000.5.formatSum())
    }

    /**
     * Infos
     */

    // test adding info with different casing
    @Test fun testAddExistingInfo() {
        TAG = "testAddExistingInfo"
        Helpers.addAccount()
        onView(withId(R.id.create_operation)).perform(click())

        Helpers.scrollThenTypeText(R.id.edit_op_third_party, OP_TP)
        Helpers.scrollThenTypeText(R.id.edit_op_sum, OP_AMOUNT)
        onView(withId(R.id.edit_op_third_parties_list)).perform(scrollTo()).perform(click())
        Helpers.clickOnDialogButton(R.string.create)
        onView(allOf(iz(instanceOf(EditText::class.java)), hasFocus()) as Matcher<View>).perform(replaceText("Atest"))
        Helpers.clickOnDialogButton(R.string.ok)

        onView(allOf(iz(instanceOf(ListView::class.java)), isDisplayed()) as Matcher<View>).check(has(1, ListView::class.java))

        // 3 following lines are hack because a bug of Espresso
        Helpers.pauseTest(1000)
        Helpers.clickOnDialogButton(R.string.cancel)
        Helpers.pauseTest(1000)
        onView(withId(R.id.edit_op_third_parties_list)).perform(scrollTo()).perform(click())

        Helpers.clickOnDialogButton(R.string.create)
        onView(allOf(iz(instanceOf(EditText::class.java)), hasFocus()) as Matcher<View>).perform(replaceText("ATest"))
        Helpers.clickOnDialogButton(R.string.ok)
        onView(withText(R.string.item_exists)).check(matches(isDisplayed()))
        Helpers.clickOnDialogButton(R.string.ok)
    }

    // issue 50 test // TODO : debug
    fun _estAddInfoAndCreateOp() {
        TAG = "testAddInfoAndCreateOp"
        Helpers.addAccount()
        onView(withId(R.id.create_operation)).perform(click())
        Helpers.scrollThenTypeText(R.id.edit_op_third_party, OP_TP)
        Helpers.scrollThenTypeText(R.id.edit_op_sum, OP_AMOUNT)
        onView(withId(R.id.edit_op_third_parties_list)).perform(click())
        Helpers.clickOnDialogButton(R.string.create)
        onView(allOf(iz(instanceOf(EditText::class.java)), hasFocus()) as Matcher<View>).perform(replaceText("Atest"))
        Helpers.clickOnDialogButton(R.string.ok)

        Helpers.pauseTest(1000)

        onView(allOf(iz(instanceOf(ListView::class.java)), isDisplayed()) as Matcher<View>).check(has(1, ListView::class.java))

        onData(iz(instanceOf(Cursor::class.java))).inAdapterView(iz<ListView>(instanceOf(ListView::class.java)) as Matcher<View>).atPosition(0).perform(click())

        Helpers.pauseTest(1000)

        // BUG here
        //        Helpers.clickOnDialogButton(R.string.ok)
        onView(allOf(isDisplayed(), withText("Ok")) as Matcher<View>).inRoot(DebugEspresso.isAlertDialog()).perform(click())

        Helpers.clickOnActionItemConfirm()
        onView(withId(R.id.create_operation)).perform(click())
        onView(withId(R.id.edit_op_third_parties_list)).perform(click())
        onView(allOf(iz(instanceOf(ListView::class.java)), isDisplayed()) as Matcher<View>).check(has(1, ListView::class.java))
    }

    private fun addOpOnDate(t: DateTime, idx: Int) {
        onView(withId(R.id.create_operation)).perform(click())
        Helpers.setDateOnPicker(R.id.op_date_btn, t)
        Helpers.scrollThenTypeText(R.id.edit_op_third_party, "$OP_TP/$idx")
        Helpers.scrollThenTypeText(R.id.edit_op_sum, "1")
        Helpers.clickOnActionItemConfirm()
    }

    private fun setUpProjTest1() {
        Helpers.addAccount()
        val today = DateTime.today(TIME_ZONE)
        val cleanUpDay = DateTime.forDateOnly(today.year, today.month, Math.min(today.day, 28))
        var date = cleanUpDay.minusMonth(2)
        for (i in 0..5) {
            addOpOnDate(date, i)
            Helpers.pauseTest(300)
            date = date.plusMonth(1)
        }
    }

    fun modifyAccountToMode1(d: DateTime) {
        Helpers.callAccountEdit()

        Helpers.clickOnSpinner(R.id.projection_date_spinner, R.array.projection_modes, 1)

        onView(withId(R.id.projection_date_value)).check(matches(isEnabled()))

        Helpers.scrollThenTypeText(R.id.projection_date_value, d.day.toString())
        Helpers.clickOnActionItemConfirm()
    }

    @Test fun testMoveOpMode1AfterToBefore() {
        setUpProjTest1()
        val today = DateTime.today(TIME_ZONE)
        val cleanedUpDay = DateTime.forDateOnly(today.year, today.month, Math.min(today.day, 28))
        modifyAccountToMode1(cleanedUpDay)

        Helpers.checkAccountSumIs(996.50.formatSum())

        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.op_edition)
        Helpers.setDateOnPicker(R.id.op_date_btn, today)
        Helpers.clickOnActionItemConfirm()

        Helpers.checkAccountSumIs(995.50.formatSum())
    }

    @Test fun testProjectionFromOpList() {
        TAG = "testProjectionFromOpList"

        // test mode 0 = furthest
        setUpProjTest1()
        val today = DateTime.today(TIME_ZONE)
        val cleanedUpDay = DateTime.forDateOnly(today.year, today.month, Math.min(today.day, 28))
        val later3Month = cleanedUpDay.plusMonth(3)
        Helpers.pauseTest(1000)
        Helpers.checkAccountSumIs(994.50.formatSum())
        onView(withId(R.id.account_balance_at)).check(matches(withText(containsString(later3Month.formatDateLong()))))

        Helpers.clickOnRecyclerViewAtPos(0)

        Helpers.checkSelectedSumIs(994.50.formatSum())

        // test mode 1 = day of next month
        modifyAccountToMode1(cleanedUpDay)

        val oneMonthLater = cleanedUpDay.plusMonth(1)
        Log.d(TAG, "1DATE : " + oneMonthLater)

        onView(withId(R.id.account_balance_at)).check(matches(withText(containsString(oneMonthLater.formatDateLong()))))
        onView(withId(R.id.account_sum)).check(matches(withText(containsString(996.50.formatSum()))))

        Helpers.clickOnRecyclerViewAtPos(0)
        Helpers.checkSelectedSumIs(994.50.formatSum())

        // test mode 2 = absolute date
        Helpers.callAccountEdit()
        Helpers.clickOnSpinner(R.id.projection_date_spinner, R.array.projection_modes, 2)

        onView(withId(R.id.projection_date_value)).check(matches(isEnabled()))

        val later3Month28th = DateTime.forDateOnly(later3Month.year, later3Month.month, 28)
        val f = SimpleDateFormat("dd/MM/yyyy")
        Helpers.scrollThenTypeText(R.id.projection_date_value, f.format(later3Month28th.getMilliseconds(TIME_ZONE)))
        Helpers.clickOnActionItemConfirm()

        Log.d(TAG, "2DATE : " + f.format(later3Month28th.getMilliseconds(TIME_ZONE)))
        onView(withId(R.id.account_balance_at)).check(matches(withText(containsString(later3Month28th.formatDateLong()))))
        Helpers.clickOnRecyclerViewAtPos(0)
        onView(withId(R.id.account_sum)).check(matches(withText(containsString(994.50.formatSum()))))

        onView(withId(R.id.operation_list)).perform(actionOnItemAtPosition <OpRowHolder <Operation>>(5, scrollTo()))
        Helpers.clickOnRecyclerViewAtPos(5)

        onView(withId(R.id.account_sum)).check(matches(withText(containsString(994.50.formatSum()))))

        Helpers.checkSelectedSumIs(999.50.formatSum())

        // test back to mode 0
        Helpers.callAccountEdit()
        Helpers.clickOnSpinner(R.id.projection_date_spinner, R.array.projection_modes, 0)
        onView(withId(R.id.projection_date_value)).check(matches(not(isDisplayed())))
        Helpers.clickOnActionItemConfirm()

        onView(withId(R.id.account_sum)).check(matches(withText(containsString(994.50.formatSum()))))

        Helpers.checkSelectedSumIs(999.50.formatSum())
    }

    fun addOpMode1() {
        // add account
        Helpers.checkTitleBarDisplayed(R.string.account_creation)
        Helpers.scrollThenTypeText(R.id.edit_account_name, ACCOUNT_NAME)
        Helpers.scrollThenTypeText(R.id.edit_account_start_sum, ACCOUNT_START_SUM)
        Helpers.scrollThenTypeText(R.id.edit_account_desc, ACCOUNT_DESC)
        Helpers.clickOnSpinner(R.id.projection_date_spinner, R.array.projection_modes, 1)
        onView(withId(R.id.projection_date_value)).check(matches(isEnabled()))

        // set projection to a day of next month
        val tomorrow = DateTime.today(TIME_ZONE).plusDays(1)
        Helpers.scrollThenTypeText(R.id.projection_date_value, Integer.toString(tomorrow.day))

        Helpers.clickOnActionItemConfirm()

        onView(withText(R.string.no_operation)).check(matches(isDisplayed()))
        Helpers.checkAccountSumIs(1000.50.formatSum())

        // add an op today, should change the account sum
        val today = DateTime.today(TIME_ZONE)
        addOpOnDate(today, 0)
        Helpers.pauseTest(1000)
        Helpers.clickOnAccountSpinner(ACCOUNT_NAME)
        Helpers.checkAccountSumIs(999.50.formatSum())
        Helpers.clickOnRecyclerViewAtPos(0)
        Helpers.checkSelectedSumIs(999.50.formatSum())


        // add op after proj date, should not change account sum
        val nextMonth = tomorrow.plusMonth(1).plusDays(1)
        addOpOnDate(nextMonth, 1)
        Helpers.clickOnRecyclerViewAtPos(0)
        Helpers.checkAccountSumIs(999.50.formatSum())
        Helpers.checkSelectedSumIs(998.50.formatSum())

        // add op before X of next month, should update the current sum
        val prevMonth = today.minusMonth(1)
        addOpOnDate(prevMonth, 2)
        // Log.d(TAG, "addOpMode1 after three add " +
        // solo.getCurrentListViews().get(0).getCount());
        Helpers.clickOnRecyclerViewAtPos(0)

        Helpers.checkAccountSumIs(998.50.formatSum())

        Helpers.pauseTest(1000)
        Helpers.checkSelectedSumIs(997.50.formatSum())
    }

    fun editOpMode1() {
        addOpMode1()

        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.op_edition)
        onView(withId(R.id.edit_op_sum)).perform(clearText())
        Helpers.scrollThenTypeText(R.id.edit_op_sum, "+2")
        Helpers.clickOnActionItemConfirm()

        Helpers.clickOnRecyclerViewAtPos(0)
        Helpers.checkAccountSumIs(998.50.formatSum())
        Helpers.checkSelectedSumIs(1000.50.formatSum())

        // Log.d(TAG, "editOpMode1 after one edit " + solo.getCurrentListViews().get(0).getCount());

        Helpers.clickOnRecyclerViewAtPos(2)
        onView(allOf(withId(R.id.edit_op), isDisplayed())).perform(click())
        Helpers.checkTitleBarDisplayed(R.string.op_edition)
        onView(withId(R.id.edit_op_sum)).perform(clearText())
        Helpers.scrollThenTypeText(R.id.edit_op_sum, "+2")
        Helpers.clickOnActionItemConfirm()

        // Log.d(TAG, "editOpMode1 after one edit " + solo.getCurrentListViews().get(0).getCount());

        Helpers.clickOnRecyclerViewAtPos(0)
        //        onView(withId(android.R.id.list)).check(has())
        Helpers.checkAccountSumIs(1001.50.formatSum())
        Helpers.checkSelectedSumIs(1003.50.formatSum())
    }

    private fun delOps() {
        Helpers.clickOnRecyclerViewAtPos(0)
        onView(allOf(withId(R.id.delete_op), isDisplayed())).perform(click())
        Helpers.clickOnDialogButton(R.string.yes)

        val sum = 1001.50.formatSum()
        Helpers.clickOnRecyclerViewAtPos(0)

        Helpers.checkAccountSumIs(sum)

        Helpers.clickOnRecyclerViewAtPos(1)
        onView(allOf(withId(R.id.delete_op), isDisplayed())).perform(click())
        Helpers.clickOnDialogButton(R.string.yes)

        Helpers.clickOnRecyclerViewAtPos(0)
        val sum2 = 999.50.formatSum()
        Helpers.checkAccountSumIs(sum2)
        Helpers.checkSelectedSumIs(sum2)
    }

    @Test fun testDelOpMode1() {
        TAG = "testDelOpMode1"
        editOpMode1()
        delOps()
    }

    fun addOpMode2() {
        // add account
        Helpers.checkTitleBarDisplayed(R.string.account_creation)

        Helpers.scrollThenTypeText(R.id.edit_account_name, ACCOUNT_NAME)
        Helpers.scrollThenTypeText(R.id.edit_account_start_sum, ACCOUNT_START_SUM)
        Helpers.scrollThenTypeText(R.id.edit_account_desc, ACCOUNT_DESC)

        Helpers.clickOnSpinner(R.id.projection_date_spinner, R.array.projection_modes, 1)

        onView(withId(R.id.projection_date_value)).check(matches(isEnabled()))

        val today = DateTime.today(TIME_ZONE)
        val tomorrow = today.plusDays(1)

        Helpers.scrollThenTypeText(R.id.projection_date_value,
